0.4
  - Fixed jsUnity assignment method to make JScript happy
  - Removed the need for runner functions
  - Rewired suite type handling
  - Added probing to array suites
  - Array suites now support both strings and functions as items
  - Renamed results.name to results.suiteName

0.3
  - Improved function parser to handle nested functions and comments
  - Enabled all suite types
  - Fixed default assertion scope
  - Fixed test suite name passing bug
  - Made function parsing regex more lax to work with AppJet

0.2
  - Moved default assertions into defaultAssertions, out of the global scope
  - Assertion set can be overridden
  - Added attachAssertions

0.1
  - Initial release
  - Supports only function-style test suites