@@ -1,13 +1,14 @@
 <html>
 <head>
-    <title>Assertion Test Suite Runner</title>
+    <title>Core Test Suite Runner</title>
     <script type="text/javascript" src="../jsunity.js"></script>
-    <script type="text/javascript" src="assertionTestSuite.js"></script>
+    <script type="text/javascript" src="coreTestSuite.js"></script>
 </head>
 <body>
     <script type="text/javascript">
     jsUnity.log = function (s) { document.write("<div>" + s + "</div>"); }
-    jsUnity.run(assertionTestSuite);
+    jsUnity.run(coreTestSuite);
     </script>
 </body>
 </html>
+  
