@@ -1,5 +1,5 @@
 load('../jsunity.js');
-load('jsUnityTestSuite.js');
+load('coreTestSuite.js');
 
 jsUnity.log = function (s) { print(s) };
-jsUnity.run(jsUnityTestSuite);
+jsUnity.run(coreTestSuite);
