@@ -1,8 +1,0 @@
-<script type="text/javascript" src="../jsunity.js"></script>
-<script type="text/javascript" src="jsUnityTestSuite.js"></script>
-<pre>
-<script type="text/javascript">
-jsUnity.log = function (s) { document.write(s + "<br/>"); }
-jsUnity.run(jsUnityTestSuite);
-</script>
-</pre>
